# CLPE_G_NVP2650D_SDK

./: README.md  package.xml  patchfile
include/: ClpeClientApi.h  ClpeGlobalDef.h  ClpeSDKVersion.h  ClpeSocket.h  ClpeStream.h
lib/: ClpeClientApi.cpp
main/: ClpeApi_Example_Main.cpp
